WIP rtems monitoring

--- a/devIocStats/Makefile
+++ b/devIocStats/Makefile
@@ -44,6 +44,8 @@ SRCS += osdBootInfo.c
 SRCS += osdSystemInfo.c
 SRCS += osdHostInfo.c
 SRCS += osdPIDInfo.c
+SRCS += osdIPStat.c
+SRCS += osdNFSErrors.c
 
 OBJS_vxWorks += osdCpuUsageTest.o
 
